--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:title" content="Flantic - Best Discord bot">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://flantic.gg/">
-<meta property="og:image" content="static/Flantic.png" />
+<meta property="og:image" content="./static/Flantic.png"/>
 <meta property="og:description" content="Build the best discord server with Flantic! - A feature packed Discord bot.">
 <meta property="og:site_name" content="Flantic">
 <meta name="twitter:card" content="summary_large_image">
