--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <link href="./static/css(1)" rel="stylesheet">
 <link href="./static/bootstrap.min.css" rel="stylesheet">
 <link href="./static/boxicons.min.css" rel="stylesheet">
+<link rel="icon" href="./static/flantic.png"/>
 
 <link href="./static/style.css" rel="stylesheet">
 </head>
