--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>Flantic - Best Discord bot</title>
+ <logo> "./static/flantic.png" </logo>
 <meta name="title" content="Flantic - Best Discord bot">
 <meta name="description" content="Build the best discord server with Flantic! - A feature packed Discord bot.">
 <meta name="keywords" content="Discord,Bot,Flantic,Website,Moderation,Discordpy,AI,EasytoMake">
